--- a/app/views/users/_sign_up.html.erb
+++ b/app/views/users/_sign_up.html.erb
@@ -1,4 +1,5 @@
-<form class="" action="<%= users_url %>" method="post">
+<% options = sign_up_hash(type) %>
+<form class="" action="<%= options[:path] %>" method="post">
   <%= auth_token %>
   <label>Email:
     <input type="text" name="user[email]" value="">
@@ -8,5 +9,5 @@
     <input type="text" name="user[password]" value="">
   </label>
   <br><br>
-  <input type="submit" name="" value="Create User!">
+  <input type="submit" name="" value="<%= options[:button_label] %>">
 </form>
