--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,3 @@
 <h1>Create A New User!</h1>
 <%= render 'shared/errors' %>
-<%= render 'sign_up', user: @user, type: :new %>
+<%= render 'sign_up', type: :new %>
