--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,18 +8,15 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-  <header>
-    <% if loggedin? %>
-      <%= @user.email %>
-    <% end %>
-  </header>
+  <%= render 'shared/header', user: current_user %>
   <body>
     <%= yield %>
     <footer>
       <a href="<%= users_url %>">Return to Users Page</a>
       <br><br>
-      <% if loggedin? %>
+      <% if logged_in? %>
         <form class="" action="<%= session_url %>" method="post">
+          <%= auth_token %>
           <input type="hidden" name="_method" value="delete">
           <input type="submit" name="" value="Logout!">
         </form>
