Style pages, create Band model

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,59 @@
  *= require_tree .
  *= require_self
  */
+body {
+ font-family: Arial, serif;
+}
+
+h1 {
+  font-size: 32px;
+  padding: 5px;
+}
+
+h2 {
+  padding : 5px;
+  font-size: 26px;
+}
+
+.sign_up {
+  padding: 5px;
+  font-size: 20px;
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.button {
+  width: 100px;
+  background-color: #bf80ff;
+}
+
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #bf80ff;
+  padding-bottom: 5px;
+  margin-bottom: 20px;
+}
+
+.user-header {
+  font-weight: bold;
+  color: #000080;
+  padding-right: 10px;
+  display: inherit;
+  flex-direction: column;
+}
+
+.login {
+  color: black;
+  font-style: serif;
+  padding: 15px;
+
+}
+
+.login:visited {
+  color: inherit;
+}
