--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,26 +4,14 @@
     <title>Music</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <%= stylesheet_link_tag 'css_reset' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-  <%= render 'shared/header', user: current_user %>
+  <%= render 'layouts/header', user: current_user %>
   <body>
     <%= yield %>
     <footer>
-      <a href="<%= users_url %>">Return to Users Page</a>
-      <br><br>
-      <% if logged_in? %>
-        <form class="" action="<%= session_url %>" method="post">
-          <%= auth_token %>
-          <input type="hidden" name="_method" value="delete">
-          <input type="submit" name="" value="Logout!">
-        </form>
-        <% else %>
-        <a href="<%= new_session_url %>">Log In!</a>
-        <% end %>
-
       <%= yield :footer %>
     </footer>
   </body>
