--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -3,3 +3,5 @@
     <li> <a href="<%= band_url(band) %>"><%= band.name %></a> </li><br>
   </ul>
 <% end  %>
+
+<a href="<%= new_band_url %>">Make a New Band</a>
