--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -2,4 +2,9 @@
   <br><br>
   <a href="<%= edit_band_url(@band) %>">Edit This Band</a>
   <br><br>
+  <form class="" action="<%= band_url(@band) %>" method="post">
+    <%= auth_token %>
+    <input type="hidden" name="_method" value="delete">
+    <input type="submit" name="" value="Delete This Band">
+  </form>
 <%= render 'footer' %>
