Change some css styling

--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -1,5 +1,5 @@
 <% @bands.each do |band| %>
-  <ul>
+  <ul style="padding:5px;">
     <li> <a href="<%= band_url(band) %>"><%= band.name %></a> </li><br>
   </ul>
 <% end  %>
