--- a/app/assets/stylesheets/album.scss
+++ b/app/assets/stylesheets/album.scss
@@ -7,3 +7,10 @@
   flex-direction: column;
   align-items: flex-end;
 }
+
+ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 250px;   
+}
