--- a/app/views/albums/_display.html.erb
+++ b/app/views/albums/_display.html.erb
@@ -1,5 +1,6 @@
 <ul>
-  <li><%= album.title %></li>
+  <li style="font-size: 18px;font-weight:bold;">
+    <a style="color:black;"href="<%= album_url(album) %>"><%= album.title %></a></li>
   <li><%= album.yr %></li>
   <li><%= album.live ? "Live" : "Studio" %></li>
 </ul>
