--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Make a New Album for <%= @band.name %></h1>
+<h2>Make a New Album</h2>
+<%= render 'shared/errors' %>
 <%= render 'form', album: @album, band: @band %>
