--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -1,7 +1,7 @@
 <% @bands.each do |band| %>
   <ul style="padding:5px;">
-    <li> <a href="<%= band_url(band) %>"><%= band.name %></a> </li><br>
+    <li> <a class="band" href="<%= band_url(band) %>"><%= band.name %></a> </li><br>
   </ul>
 <% end  %>
 
-<a href="<%= new_band_url %>">Make a New Band</a>
+<a class="button" href="<%= new_band_url %>">Make a New Band</a>
