Finish delete for albums controller

--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,3 +1,9 @@
+<%= render "shared/errors" %>
 <%= render 'display', album: @album %>
 <a href="<%= edit_album_url(@album) %>">Edit this Album</a>
 <a href="<%= band_url(@band) %>">Return to the <%= @band.name %> page</a>
+<form class="" action="<%= album_url(@album) %>" method="post">
+  <%= auth_token %>
+  <input type="hidden" name="_method" value="delete">
+  <input type="submit" name="" value="Delete This Album">
+</form>
