--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -1,3 +1,3 @@
 <h2>Make a New Album</h2>
 <%= render 'shared/errors' %>
-<%= render 'form', album: @album, band: @band %>
+<%= render 'form', album: @album, band_id: params[:band_id] %>
