--- a/app/views/albums/edit.html.erb
+++ b/app/views/albums/edit.html.erb
@@ -1,2 +1,3 @@
 <h2>Edit a Existing Album</h2>
-<%= render 'form', album: @album, band: @band %>
+<%= render 'shared/errors' %>
+<%= render 'form', album: @album, band_id: @album.band_id %>
