Finish track show page

--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -1,1 +1,7 @@
+<h1><%= @track.title %></h1>
 
+<ul>
+  <li><%= @track.ord %></li>
+  <li><%= @track.lyrics %></li>
+  <li><%= @track.regular ? "Standard Track" : "Bonus Track" %></li>
+</ul>
